[gd_scene load_steps=3 format=3 uid="uid://b0h6n52b5a4n6"]

[ext_resource type="Script" path="res://Scenes/input_box.gd" id="1_apeul"]
[ext_resource type="FontFile" uid="uid://b4px0375vn33t" path="res://Assets/consola.ttf" id="1_rerg4"]

[node name="InputBox" type="LineEdit"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -37.5
offset_right = 70.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("1_rerg4")
theme_override_font_sizes/font_size = 50
alignment = 1
max_length = 4
context_menu_enabled = false
caret_blink = true
caret_blink_interval = 0.5
script = ExtResource("1_apeul")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="text_changed" from="." to="." method="_on_text_changed"]
[connection signal="text_submitted" from="." to="." method="_on_text_submitted"]
